structured and added image slider

--- a/themes/t4mag/layouts/_default/baseof.html
+++ b/themes/t4mag/layouts/_default/baseof.html
@@ -20,7 +20,9 @@
 				<!-- end rt-mobile-header -->
 
 				<!-- Start Main -->
-				<main>{{ block "main" . }} {{ end }}</main>
+				<main>{{ block "main" . }} 
+					{{ .Content }}	
+				{{ end }}</main>
 				<!-- End Main -->
 
 				<!-- Start Footer -->
