--- a/themes/t4mag/layouts/partials/body/top-stories.html
+++ b/themes/t4mag/layouts/partials/body/top-stories.html
@@ -81,7 +81,7 @@
 					<div class="post-content">
 						<a href="{{ $.Site.BaseURL }}category/{{ .Params.category }}" class="rt-post-cat-normal">{{ .Params.category }}</a>
 						<h3 class="post-title">
-							<a href="single-post1.html">
+							<a href="{{ .Permalink }}">
 								{{ .Page.Title }}
 							</a>
 						</h3>
