--- a/themes/t4mag/layouts/_default/single.html
+++ b/themes/t4mag/layouts/_default/single.html
@@ -334,65 +334,7 @@
 							{{ partial "sidebar/popular-circle.html" . }}
 							<!-- end slidebar wrap  -->
 
-							<div class="sidebar-wrap mb--40">
-								<h2 class="rt-section-heading style-2 mb--30">
-									<span class="rt-section-text">Hot Categories </span>
-									<span class="rt-section-dot"></span>
-									<span class="rt-section-line"></span>
-								</h2>
-								<ul class="rt-categories">
-									<li>
-										<a
-											href="gaming.html"
-											data-bg-image="/images/gallery/cat_1.jpg"
-											style="background-image: url('/images/gallery/cat_1.jpg')"
-										>
-											<span class="cat-name">Sports</span>
-											<span class="count">59</span>
-										</a>
-									</li>
-									<li>
-										<a
-											href="life-style.html"
-											data-bg-image="/images/gallery/cat_2.jpg"
-											style="background-image: url('/images/gallery/cat_2.jpg')"
-										>
-											<span class="cat-name">World</span>
-											<span class="count">12</span>
-										</a>
-									</li>
-									<li>
-										<a
-											href="technology.html"
-											data-bg-image="/images/gallery/cat_3.jpg"
-											style="background-image: url('/images/gallery/cat_3.jpg')"
-										>
-											<span class="cat-name">Technology</span>
-											<span class="count">59</span>
-										</a>
-									</li>
-									<li>
-										<a
-											href="life-style.html"
-											data-bg-image="/images/gallery/cat_4.jpg"
-											style="background-image: url('/images/gallery/cat_4.jpg')"
-										>
-											<span class="cat-name">Food</span>
-											<span class="count">12</span>
-										</a>
-									</li>
-									<li>
-										<a
-											href="life-style.html"
-											data-bg-image="/images/gallery/cat_5.jpg"
-											style="background-image: url('/images/gallery/cat_5.jpg')"
-										>
-											<span class="cat-name">Travel</span>
-											<span class="count">12</span>
-										</a>
-									</li>
-								</ul>
-							</div>
+							{{ partial "taxonomy/taxonomy-categories.html" . }}
 							<!-- end slidebar wrap  -->
 
 							<div class="sidebar-wrap mb--40">
@@ -432,24 +374,7 @@
 							<!-- end sidebar wrap -->
 
 							<div class="sidebar-wrap mb--40">
-								<h2 class="rt-section-heading style-2 mb--30">
-									<span class="rt-section-text">Tags </span>
-									<span class="rt-section-dot"></span>
-									<span class="rt-section-line"></span>
-								</h2>
-								<div class="tag-list">
-									{{range $name, $taxonomy := .Site.Taxonomies.tags}} {{ $cnt := .Count }}
-									{{ with $.Site.GetPage (printf "/tags/%s" $name) }}
-		
-										<a href={{ .RelPermalink }} title="All pages with tag <i>{{$name}}" class="tag-link">{{$name}}</a>
-									
-									{{end}}
-									{{end}}
-
-									{{range ($.Site.GetPage "taxonomyTerm" "category").Pages }}
-   <a href="{{.Permalink}}">{{.Title}}</a></li>
-{{end}}
-								</div>
+								{{ partial "taxonomy/taxonomy-tags.html" . }}
 							</div>
 							<!-- end sidebar wrap -->
 						</div>
