--- a/themes/t4mag/layouts/_default/taxonomy.html
+++ b/themes/t4mag/layouts/_default/taxonomy.html
@@ -1,4 +1,12 @@
 {{ define "main" }}
-
-
-{{ end }}
+  <div class="container">
+    <h1>All posts for {{ .Type | singularize }} "{{ .Title }}"</h1>
+    <ul>
+      {{ range .Data.Pages }}
+        <li>
+          <a href="{{ .Permalink }}">{{ .Title }}</a>
+        </li>
+      {{ end }}
+    </ul>
+  </div>
+{{ end}}
