--- a/themes/t4mag/layouts/_default/terms.html
+++ b/themes/t4mag/layouts/_default/terms.html
@@ -1,1 +1,12 @@
-{{ define "main" }} {{ end }}
+{{ define "main" }}
+  <div class="container">
+    <h1>All {{ .Type }}</h1>
+    <ul>
+      {{ range .Data.Pages }}
+        <li>
+          <a href="{{ .Permalink }}">{{ .Title }}</a>
+        </li>
+      {{ end }}
+    </ul>
+  </div>
+{{ end }}
