structured and added image slider

--- a/themes/t4mag/static/css/style.css
+++ b/themes/t4mag/static/css/style.css
@@ -1308,7 +1308,7 @@ section,
 .networking,
 .mission,
 .linux,
-.football,
+.web,
 .action,
 .games,
 .software,
@@ -1354,7 +1354,7 @@ section,
 .networking:hover,
 .mission:hover,
 .linux:hover,
-.football:hover,
+.web:hover,
 .action:hover,
 .games:hover,
 .software:hover,
@@ -1391,7 +1391,7 @@ section,
 [data-theme="dark"] .networking,
 [data-theme="dark"] .mission,
 [data-theme="dark"] .linux,
-[data-theme="dark"] .football,
+[data-theme="dark"] .web,
 [data-theme="dark"] .action,
 [data-theme="dark"] .games,
 [data-theme="dark"] .software,
@@ -1431,7 +1431,7 @@ section,
 
 .mission,
 .linux,
-.football {
+.web {
 	background-color: #0073ff;
 }
 
