structured and added image slider

--- a/themes/t4mag/layouts/partials/header/header.html
+++ b/themes/t4mag/layouts/partials/header/header.html
@@ -42,17 +42,16 @@
 								<li class="main-menu__nav_sub list">
 									<a class="animation" href="javascript:void(0)">How To</a>
 								</li>
-								<li class="main-menu__nav_sub list">
+								<li class="main-menu__nav_sub drop-down list">
 									<a class="animation" href="javascript:void(0)">Categories </a>
 									<ul class="main-menu__dropdown">
-										<li><a href="life-style.html">Life Style</a></li>
-										<li><a href="technology.html">Technology</a></li>
-										<li><a href="gaming.html">Gaming</a></li>
-										<li><a href="graphics.html">Graphics</a></li>
-										<li><a href="politics.html">Politics</a></li>
+										{{range ($.Site.GetPage "taxonomyTerm" "category").Pages }}
+										<li><a class="menu-item_link" href="{{.Permalink}}">{{.Title}}</a></li>
+										{{end}}
+
 									</ul>
 								</li>
-								<li class="main-menu__nav_sub list">
+								<li class="main-menu__nav_sub drop-down list">
 									<a class="animation" href="javascript:void(0)">Pages</a>
 									<ul class="main-menu__dropdown">
 										<li><a href="about.html">About Us</a></li>
